# currennt_opencl

./: CMakeLists.txt  Makefile  README.md  changelog.txt  config.cfg  config1.cfg  currennt_kernel.cl
currennt/src/: main.cpp
currennt_lib/src/: Configuration.cpp  Configuration.hpp  LayerFactory.cu  LayerFactoryCL.cpp  LayerFactoryCL.hpp  NeuralNetwork.cpp  NeuralNetworkCL.cpp  NeuralNetworkCL.hpp  SystemCL.hpp  Types.hpp  TypesCL.hpp
currennt_lib/src/data_sets/: DataSetCL.cpp  DataSetCL.hpp  DataSetFractionCL.cpp  DataSetFractionCL.hpp
currennt_lib/src/helpers/: Matrix.hpp  MatrixCL.cpp  MatrixCL.hpp
currennt_lib/src/layers/: BinaryClassificationLayerCL.cpp  BinaryClassificationLayerCL.hpp  CePostOutputLayerCL.cpp  CePostOutputLayerCL.hpp  FeedForwardLayer.cu  FeedForwardLayerCL.cpp  FeedForwardLayerCL.hpp  InputLayerCL.cpp  InputLayerCL.hpp  LayerCL.cpp  LayerCL.hpp  LstmLayer.cu  LstmLayerCL.cpp  LstmLayerCL.hpp  MulticlassClassificationLayer.cu  MulticlassClassificationLayerCL.cpp  MulticlassClassificationLayerCL.hpp  PostOutputLayerCL.cpp  PostOutputLayerCL.hpp  RmsePostOutputLayerCL.cpp  RmsePostOutputLayerCL.hpp  SoftmaxLayer.cu  SoftmaxLayerCL.cpp  SoftmaxLayerCL.hpp  SseMaskPostOutputLayerCL.cpp  SseMaskPostOutputLayerCL.hpp  SsePostOutputLayer.cu  SsePostOutputLayerCL.cpp  SsePostOutputLayerCL.hpp  TrainableLayerCL.cpp  TrainableLayerCL.hpp  WeightedSsePostOutputLayerCL.cpp  WeightedSsePostOutputLayerCL.hpp
currennt_lib/src/optimizers/: Optimizer.cu  OptimizerCL.cpp  OptimizerCL.hpp  (+3 more)
tests/test1/: config.cfg  trained_network.jsn
